--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ THEME=https://raw.githubusercontent.com/kognise/obsidian-atom/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
